# pilk-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  railway.json
agents/: README.md
clients/: README.md  _example.yaml
core/: __init__.py  main.py
docs/: ARCHITECTURE.md  READINESS_DASHBOARD.md  portal.md  supabase.md
portal/: .env.example  README.md  index.html  package.json  vite.config.ts
scripts/: backup_pilk.sh  bootstrap_pilk_home.py  link_google.py  pilk_migrate.py
supabase/: config.toml
tests/: conftest.py  test_accounts_store.py  test_ads_audit_agent_manifest.py  test_agent_create.py  test_agent_email_deliver.py  test_agent_integrations.py  test_agent_policy.py  test_alerts.py  test_analyze_video_url.py  test_anthropic_provider_caching.py  test_api_engine.py  test_apify_client.py  test_apple_contacts.py  test_apple_messages.py  test_approvals.py  test_arcads_tools.py  test_auth_middleware.py  test_brain_auto_ingest.py  test_brain_ingest_gmail.py  test_brain_ingesters.py  test_brain_route.py  test_brain_search_and_replace.py  test_brain_semantic_search_tool.py  test_brain_vault.py  test_brain_vector.py  test_browser_signup_policy.py  test_calendar_glance.py  test_cancel.py  test_chat_attachments.py  test_chatgpt_index.py  test_chatgpt_index_rebuild_hook.py  test_claude_code_chat_provider.py  test_claude_code_usage_scan.py  test_client_secrets.py  test_client_store.py  test_codex_engine.py  test_coding_engines.py  test_coding_router.py  test_comms_policy.py  test_computer_control.py  (+119 more)
triggers/: README.md
(+450 files in other folders)
